Fixed a issue where part of the title will disappear when view  on mobile

--- a/web/style-menu.css
+++ b/web/style-menu.css
@@ -331,6 +331,10 @@ img.theme-switch-night-mode-icon { /*Unused*/
         padding-right: 4px;
     }
 
+    p.title {
+        margin: -2px 19px 0 0;
+    }
+
 }
 
 
